<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.dwliu.ebase</groupId>
    <artifactId>ebase-boot</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <name>${project.artifactId}</name>

    <description>
        ebase-boot 是一款基于SpringBoot 3.x的服务集成基础框架，内部提供了第三方框架的封装集成，让接口开发者可以选择性完成开箱即用。
    </description>

    <url>https://gitee.com/ebase/ebase-boot</url>

    <scm>
        <url>${git.url}</url>
        <connection>${git.connection}</connection>
        <developerConnection>${git.developerConnection}</developerConnection>
        <tag>HEAD</tag>
    </scm>


    <developers>
        <developer>
            <id>liudw</id>
            <name>liudw</name>
            <email>ldw4033@gmail.com</email>
            <roles>
                <role>Project lead</role>
                <role>Java Development Engineer</role>
            </roles>
        </developer>
    </developers>

    <modules>
        <module>ebase-boot-project</module>
    </modules>


    <properties>
        <revision>2.0.0-SNAPSHOT</revision>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <java.version>17</java.version>
        <git.url>https://gitee.com/ebase-projects/ebase-boot</git.url>
        <git.connection>scm:git:https://gitee.com/ebase-projects/ebase-boot</git.connection>
        <git.developerConnection>scm:git:git@gitee.com:ebase-projects/ebase-boot.git</git.developerConnection>
        <main.basedir>${basedir}</main.basedir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <flatten-maven-plugin.version>1.4.1</flatten-maven-plugin.version>
        <maven-release-plugin.version>3.0.0</maven-release-plugin.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--版本发布插件-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <configuration>
                    <!--配置tag，用于版本发布，mvn release:prepare,rollback,perform-->
                    <tagBase>https://gitee.com/ebase-projects/ebase-boot/tags</tagBase>
                    <!--用于切换分支，修复bug mvn release:branch-->
                    <branchBase>https://gitee.com/ebase-projects/ebase-boot/branches</branchBase>
                    <!--用于解决release与gpg之间的一个bug-->
                    <mavenExecutorId>forked-path</mavenExecutorId>
                    <tagNameFormat>@{project.version}.RELEASE</tagNameFormat>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--    <repositories>-->
    <!--        <repository>-->
    <!--            <id>public</id>-->
    <!--            <name>aliyun nexus</name>-->
    <!--            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
    <!--            <releases>-->
    <!--                <enabled>true</enabled>-->
    <!--            </releases>-->
    <!--        </repository>-->

    <!--        <repository>-->
    <!--            <id>snapshots</id>-->
    <!--            <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
    <!--            <snapshots>-->
    <!--                <enabled>true</enabled>-->
    <!--            </snapshots>-->
    <!--        </repository>-->
    <!--    </repositories>-->
    <distributionManagement>
        <repository>
            <id>company-releases</id>
            <name>releases</name>
            <url>http://nexus.dev.lwsd.cc/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>company-snapshots</id>
            <name>snapshots</name>
            <url>http://nexus.dev.lwsd.cc/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>


    <profiles>
        <profile>
            <id>sample</id>
            <modules>
                <module>ebase-boot-sample</module>
            </modules>
        </profile>

        <profile>
            <id>nexus-company</id>
            <distributionManagement>
                <repository>
                    <id>company-releases</id>
                    <name>releases</name>
                    <url>http://nexus.dev.lwsd.cc/repository/maven-releases/</url>
                </repository>
                <snapshotRepository>
                    <id>company-snapshots</id>
                    <name>snapshots</name>
                    <url>http://nexus.dev.lwsd.cc/repository/maven-snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>

        <profile>
            <id>nexus-home</id>
            <distributionManagement>
                <repository>
                    <id>home-releases</id>
                    <name>releases</name>
                    <url>http://nexus.r.dwliu.me/repository/maven-releases/</url>
                </repository>
                <snapshotRepository>
                    <id>home-snapshots</id>
                    <name>snapshots</name>
                    <url>http://nexus.r.dwliu.me/repository/maven-snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>

</project>
